# Python-API-FastAPI-TDD

./: README.md
tdd-project/: .env  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml
tdd-project/store/: main.py
tdd-project/store/core/: config.py
